--- a/02-chap2.Rmd
+++ b/02-chap2.Rmd
@@ -1,19 +1,10 @@
 # Data & Methodology {#rmd-basics}
 
-<!-- Required to number equations in HTML files -->
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  TeX: { equationNumbers: { autoNumber: "AMS" } }
-});
-</script>
-
 ## Study Area and Data Collection
 
 The study area, Qinghai-Tibet Plateau, or referred to as Tibetan Plateau, is situated in the western region of China and characterized by its high altitude averaging over 4,000 meters. Due to its low population density and an extremely alpine climate, it exhibits a unique set of travel behavioral patterns for local residents or outside tourists. Furthermore, in recent years, the plateau has witnessed rapid infrastructural development invested by Chinese government, and a significant surge in tourist influx [@Gao2021]. Despite this growth, scholarly investigations into travel behaviors, satisfaction levels, and the broader implications of these developments on local and visiting populations remain scant.
 
 The questionnaire-collecting process started both online and on-site in July of 2022. The online questionnaires were written on the cover page that only those who had ever been to Qinghai-Tibet Plateau were qualified to fill out them. Then followed by was the on-site questionnaire-distributing process along with the Second Tibetan Plateau Scientific Expedition and Research Program during late July to early August. To specifically target at tourists while considering the convenience of conducting investigation, we mainly chose four touristic sites to collect questionnaires along the expedition route. Eventually, we collected 729 on-site questionnaires, which were acquired mostly in four sites - Qinghai Province Museum in Xining City, Qinghai Lake Scenic Area, Dachaidan Emerald Lake Scenic Area, Mani Stone Mound Scenic Area in Yushu City (Figure \ref{fig:SampleLocations}). With a total number of 830 questionnaires, 16 were filtered out due to a lot of missing answers, leaving 814 eventually entering modeling phase, with an validity rate of 98.07%.
-
-
 
 ```{r fig1-sample-locations, echo=FALSE, out.width="0.8\\linewidth", fig.cap="\\label{fig:SampleLocations}Sampling Locations on the Qinghai-Tibet Plateau", fig.align='center'}
 knitr::include_graphics(here::here("figure", "SampleLocations.jpg"))
@@ -33,7 +24,7 @@ Structural Equation Model (SEM) was used in the study to entangle the complex re
 
 ## Model Construction
 
-The conceptual framework of SEM model is shown in Figure \ref{fig:}. Both direct and indirect pathways are drawn and measured, but only one model - a single-group model consisting of all observations, is measured in this model paper. A multi-group modelling approach (setting residence as a grouping variable) was previously used to compare the differences between local tourists and non-local tourists in the project. But in this model paper due to time constraints I did not incoporate the multi-group modelling analysis.
+The conceptual framework of SEM model is shown in Figure \ref{fig:conceptual_framework}. Both direct and indirect pathways are drawn and measured, but only one model - a single-group model consisting of all observations, is measured in this model paper. A multi-group modelling approach (setting residence as a grouping variable) was previously used to compare the differences between local tourists and non-local tourists in the project. But in this model paper due to time constraints I did not incoporate the multi-group modelling analysis.
 
 ```{r fig2-conceptual-frmework, echo=FALSE, out.width="0.8\\linewidth", fig.cap="\\label{fig:conceptual_framework} Conceptual Framework", fig.align='center'}
 knitr::include_graphics(here::here("figure", "conceptual_framework.png"))
@@ -76,11 +67,12 @@ str(TBQT)
 
 Below, confirmatory Factor Analysis (CFA) model and Structural Equation Modeling (SEM) model are respectively defined and measured.
 
-```{r warning = TRUE, results = "hide", tidy = TRUE}
+```{r, warning = TRUE, results = "hide", tidy = TRUE, tidy.opts = list(width.cutoff=80)}
 # Define the CFA model
 cfa_model <- '
 # Measurement model
-tourist_envi =~ ta_envi1 + ta_envi2 + ta_envi3 + ta_envi4 + ta_envi5 + ta_envi6
+tourist_envi =~ ta_envi1 + ta_envi2 + ta_envi3 + ta_envi4 + ta_envi5 
+  + ta_envi6
 road_envi =~ r_envi1 + r_envi2 + r_envi3 + r_envi4 + r_envi5
 '
 
@@ -89,22 +81,33 @@ fit_cfa <- cfa(cfa_model, data = TBQT, missing = "ml")
 
 # Model summary
 cfa_summary <- summary(fit_cfa, fit.measures = TRUE, standardized = TRUE)
-print(cfa_summary)
 ```
 
 ```{r, warning = FALSE, results = "hide", tidy = TRUE}
 # Define the SEM model
 model <- '
 # Measurement model
-tourist_envi =~ ta_envi1 + ta_envi2 + ta_envi3 + ta_envi4 + ta_envi5 + ta_envi6
+tourist_envi =~ ta_envi1 + ta_envi2 + ta_envi3 + ta_envi4 + ta_envi5 
+  + ta_envi6
 road_envi =~ r_envi1 + r_envi2 + r_envi3 + r_envi4 + r_envi5
 
 # Structural model
-frequency_travel ~ gender + age + residence + income + edu_lvl + profession + household_size + dri_lic + num_cars + exp_lvl + self_drive + other_drive + pub_trans + bicycle + walking + tourist_envi + road_envi
-daily_d ~ gender + age + residence + income + edu_lvl + profession + household_size + dri_lic + num_cars + exp_lvl + self_drive + other_drive + pub_trans + bicycle + walking + tourist_envi + road_envi
-
-sati_lvl ~ gender + age + residence + income + edu_lvl + profession + household_size + dri_lic + num_cars + exp_lvl + self_drive + other_drive + pub_trans + bicycle + walking + tourist_envi + road_envi
-sati_lvl ~ frequency_travel + daily_d
+frequency_travel ~ tourist_envi + road_envi
+  + self_drive + other_drive + pub_trans + bicycle + walking
+  + exp_lvl
+  + gender + age + residence + income + edu_lvl 
+  + profession + household_size + dri_lic + num_cars
+daily_d ~ tourist_envi + road_envi
+  + self_drive + other_drive + pub_trans + bicycle + walking
+  + exp_lvl
+  + gender + age + residence + income + edu_lvl 
+  + profession + household_size + dri_lic + num_cars
+sati_lvl ~ tourist_envi + road_envi
+  + self_drive + other_drive + pub_trans + bicycle + walking
+  + exp_lvl
+  + frequency_travel + daily_d
+  + gender + age + residence + income + edu_lvl 
+  + profession + household_size + dri_lic + num_cars
 
 # Correlations
 r_envi1 ~~ r_envi2
@@ -114,12 +117,12 @@ ta_envi5 ~~ ta_envi6
 '
 
 # Fit the model
-fit_sem <- sem(model, data = TBQT, estimator = "MLR", std.lv = TRUE, missing = "ml")
-# case-wise (or ‘full information’) maximum likelihood estimation (setting ``) cannot be used if using "WLSMV" to treat the problem of categorical endogenous variales.
+fit_sem <- sem(model, data = TBQT, estimator = "MLR", 
+               std.lv = TRUE, missing = "ml")
 
 # Model summary
-fitMeasures(fit_sem, c("rmsea", "cfi", "tli", "chisq", "df"))
-sem_summary <- summary(fit_sem, fit.measures = TRUE, standardized = TRUE, modindices = TRUE)
+sem_summary <- summary(fit_sem, fit.measures = TRUE, 
+                       standardized = TRUE, modindices = TRUE)
 
 mi <- modindices(fit_sem, sort = TRUE, maximum.number = 20)
 ```
